# massdevextractor

./: .build.yml  .drone.yml  .test.sh  .travis.yml  Jenkinsfile  README.md  massdevchart.json  pyproject.toml  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
src/massdevextractor/: __init__.py  __main__.py  cli.py  core.py  objects.py
tests/: test_massdevextractor.py
