[tool.poetry]
name = "massdevextractor"
version = "0.0.0"
description = "extract mass dev chart"
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
beautifulsoup4 = "^4.8"
lxml = "^4.4"
requests = "^2.22"
orjson = "^2.1"
structlog = "^19.2"
colorama = "^0.4.1"
pandas = "^0.25.3"
html5lib = "^1.0"
requests-html = "^0.10.0"

[tool.poetry.scripts]
massdevextractor = "massdevextractor.__main__:entrypoint"


[tool.poetry.dev-dependencies]
black = "=18.9b0"
codecov = "^2.0"
flake8 = "^3.7"
isort = "^4.3"
mypy = "^0.730.0"
pylint = "^2.4"
pytest = "^5.2"
pytest-cov = "^2.8"
tox = "^3.14"
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
bpython = "^0.18.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
